--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "coinflip"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["garritfra <garritfranke@gmail.com>"]
+repository = "https://github.com/garritfra/coinflip"
+exclude = [".gitignore"]
+readme = "README.md"
 edition = "2018"
 description = "Flip a coin and test your luck🔮"
 license = "MIT"
