--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,7 +6,7 @@ jobs:
   build:
 
     steps:
-    - uses: actions/checkout
+    - uses: actions/checkout@master
     - name: Build
       run: cargo build --verbose
     - name: Run tests
